# Smart-Finance-Tracker

./: .env.example  .gitignore  ARCHITECTURE.md  CONTEXT.md  PROGRESS.md  README.md  auth.ts  package-lock.json  package.json  proxy.ts  pyproject.toml  schema.json  tsconfig.json
api/: __init__.py  index.py
app/: globals.css  layout.tsx
app/dashboard/: page.tsx
app/login/: actions.ts  page.tsx
components/: dashboard-client.tsx
lib/: dashboard-data.ts  format.ts  sample-data.ts  supabase-server.ts  types.ts
scripts/: export_schema.py
src/: __init__.py
src/core/: __init__.py  database.py  security.py
src/schemas/: __init__.py  gateway.py  transaction.py
src/services/: __init__.py  ai_extractor.py
src/smart_finance_tracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
supabase/: expenses.sql
tests/: __init__.py  test_ai_extractor.py  test_database.py  test_gateway.py  test_transaction_schemas.py
